--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>myfaces-core-project</artifactId>
   <packaging>pom</packaging>
   <version>1.1.2-SNAPSHOT</version>
-  <name>MyFaces</name>
+  <name>MyFaces Core Project</name>
   <url>http://myfaces.apache.org/projects</url>
 
   <parent>
