--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -17,6 +17,12 @@
     <version>1.1.2-SNAPSHOT</version>
   </parent>
 
+  <scm>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/impl</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/impl</developerConnection>
+    <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/trunk/impl</url>
+  </scm>
+
   <dependencies>
 
     <dependency>
