fixed wrong groupIds and aritfactIds
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@370218 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -96,7 +96,7 @@
   <dependencies>
 
     <dependency>
-      <groupId>org.apache.myfaces</groupId>
+      <groupId>org.apache.myfaces.core</groupId>
       <artifactId>myfaces-impl</artifactId>
       <version>${version}</version>
     </dependency>
