attached source artifact
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@370232 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -222,31 +222,41 @@
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-             <artifactId>maven-javadoc-plugin</artifactId>
-             <executions>
-               <execution>
-                 <id>attach-javadoc</id>
-                 <goals><goal>jar</goal></goals>
-               </execution>
-             </executions>
-           </plugin>
-           <!--plugin>
-             <groupId>net.sourceforge.maven-taglib</groupId>
-             <artifactId>maven-taglib-plugin</artifactId>
-             <configuration>
-               <taglib.src.dir>${basedir}/target/classes/META-INF</taglib.src.dir>
-               <tldDocDir>${basedir}/target/tlddoc</tldDocDir>
-             </configuration>
-             <executions>                                                  
-               <execution>
-                 <id>attach-tlddoc</id>
-                 <goals><goal>taglibdocjar</goal></goals>
-               </execution>
-             </executions>
-           </plugin-->
-         </plugins>
-       </build>
-     </profile>
-   </profiles>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>attach-javadoc</id>
+                <goals><goal>jar</goal></goals>
+              </execution>
+            </executions>
+          </plugin>
+          <!--plugin>
+            <groupId>net.sourceforge.maven-taglib</groupId>
+            <artifactId>maven-taglib-plugin</artifactId>
+            <configuration>
+              <taglib.src.dir>${basedir}/target/classes/META-INF</taglib.src.dir>
+              <tldDocDir>${basedir}/target/tlddoc</tldDocDir>
+            </configuration>
+            <executions>
+              <execution>
+                <id>attach-tlddoc</id>
+                <goals><goal>taglibdocjar</goal></goals>
+              </execution>
+            </executions>
+          </plugin-->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>attach-source</id>
+                <goals><goal>jar</goal></goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
