tweaked poms for continuum
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@370250 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,7 +6,7 @@
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-api</artifactId>
   <packaging>jar</packaging>
-  <name>MyFaces API</name>
+  <name>API</name>
   <description>
     This is the MyFaces API Subproject Description [INSERT MORE STUFF HERE]
   </description>
