--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -54,6 +54,35 @@
             </configuration>
           </execution>
 
+          <execution>
+            <id>copy-lib</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.apache.myfaces.core</groupId>
+                  <artifactId>myfaces-api</artifactId>
+                  <version>${version}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>org.apache.myfaces.core</groupId>
+                  <artifactId>myfaces-impl</artifactId>
+                  <version>${version}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>org.apache.myfaces.commons</groupId>
+                  <artifactId>myfaces-commons</artifactId>
+                  <!-- TODO find one way to define the common version -->
+                  <version>1.1.2-SNAPSHOT</version>
+                </artifactItem>
+              </artifactItems>
+              <outputDirectory>${project.build.directory}/assembly-lib</outputDirectory>
+            </configuration>
+          </execution>
+
           <!--execution>
             <id>copy-tlddoc</id>
             <phase>package</phase>
