declare struts.jar in tomahawk optional added dependency to struts.jar in titles example added scm url in wagon-maven-plugin pom remove bz2 archives from assembly descriptors change url for nighly builds
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@371315 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -130,7 +130,7 @@
         <version>1.0-SNAPSHOT</version>
         <configuration>
           <id>myfaces-nightly-builds</id>
-          <url>scpexe://minotaur.apache.org/www/cvs.apache.org/builds/myfaces/</url>
+          <url>scpexe://minotaur.apache.org/www/cvs.apache.org/builds/myfaces/nightly</url>
           <inputDirectory>target/assembly/out</inputDirectory>
         </configuration>
       </plugin>
