added tlddoc to assembly changed checkstyle rules
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@374922 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -89,7 +89,7 @@
             </configuration>
           </execution>
 
-          <!--execution>
+          <execution>
             <id>copy-tlddoc</id>
             <phase>package</phase>
             <goals>
@@ -99,7 +99,7 @@
               <artifactItems>
 
                 <artifactItem>
-                  <groupId>org.apache.myfaces</groupId>
+                  <groupId>org.apache.myfaces.core</groupId>
                   <artifactId>myfaces-impl</artifactId>
                   <version>${version}</version>
                   <classifier>tlddoc</classifier>
@@ -108,7 +108,7 @@
                </artifactItems>
                <outputDirectory>${project.build.directory}/tlddoc</outputDirectory>
              </configuration>
-           </execution-->
+           </execution>
 
         </executions>
       </plugin>
