--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -186,17 +186,30 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>xslt-maven-plugin</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <configuration>
-              <xslFile>src/main/tld/misc/resolve_entities-tlddoc.xsl</xslFile>
-              <srcIncludes>**/*.tld</srcIncludes>
-              <srcDir>src/main/tld</srcDir>
-              <destDir>target/tlddoc-site</destDir>
-            </configuration>
             <executions>
               <execution>
+                <id>generate-tld-for-tlddoc</id>
                 <goals>
                   <goal>transform</goal>
                 </goals>
+                <configuration>
+                  <xslFile>src/main/tld/misc/resolve_entities-tlddoc.xsl</xslFile>
+                  <srcIncludes>**/*.tld</srcIncludes>
+                  <srcDir>src/main/tld</srcDir>
+                  <destDir>target/tlddoc-site</destDir>
+                </configuration>
+              </execution>
+              <execution>
+                <id>generate-tld-for-jar</id>
+                <goals>
+                  <goal>transform</goal>
+                </goals>
+                <configuration>
+                  <xslFile>src/main/tld/misc/resolve_entities.xsl</xslFile>
+                  <srcIncludes>**/*.tld</srcIncludes>
+                  <srcDir>src/main/tld</srcDir>
+                  <destDir>target/classes/META-INF</destDir>
+                </configuration>
               </execution>
             </executions>
           </plugin>
@@ -224,17 +237,30 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>xslt-maven-plugin</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <configuration>
-              <xslFile>src/main/tld/misc/resolve_entities-tlddoc.xsl</xslFile>
-              <srcIncludes>**/*.tld</srcIncludes>
-              <srcDir>src/main/tld</srcDir>
-              <destDir>target/tlddoc-site</destDir>
-            </configuration>
             <executions>
               <execution>
+                <id>generate-tld-for-tlddoc</id>
                 <goals>
                   <goal>transform</goal>
                 </goals>
+                <configuration>
+                  <xslFile>src/main/tld/misc/resolve_entities-tlddoc.xsl</xslFile>
+                  <srcIncludes>**/*.tld</srcIncludes>
+                  <srcDir>src/main/tld</srcDir>
+                  <destDir>target/tlddoc-site</destDir>
+                </configuration>
+              </execution>
+              <execution>
+                <id>generate-tld-for-jar</id>
+                <goals>
+                  <goal>transform</goal>
+                </goals>
+                <configuration>
+                  <xslFile>src/main/tld/misc/resolve_entities.xsl</xslFile>
+                  <srcIncludes>**/*.tld</srcIncludes>
+                  <srcDir>src/main/tld</srcDir>
+                  <destDir>target/classes/META-INF</destDir>
+                </configuration>
               </execution>
             </executions>
           </plugin>
