fixed some documentation issues.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@375260 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,7 +8,8 @@
   <packaging>jar</packaging>
   <name>API</name>
   <description>
-    This is the MyFaces API Subproject Description [INSERT MORE STUFF HERE]
+    The MyFaces API Subproject provides a full set of the API interfaces and classes
+    defined in JSR-127 (see also http://www.jcp.org/en/jsr/detail?id=127).
   </description>
 
   <parent>
