removed distro management (which is part of master-pom) and added snapshot repository info
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@376991 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -22,19 +22,13 @@
     <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/trunk</url>
   </scm>
 
-  <distributionManagement>
+  <repositories>
     <repository>
-      <id>apache-maven</id>
-      <name>Apache Maven Repository</name>
-      <url>scpexe://minotaur.apache.org/www/www.apache.org/dist/maven-repository</url>
-    </repository>
-    <snapshotRepository>
-      <uniqueVersion>false</uniqueVersion>
+      <snapshots />
       <id>apache-maven-snapshots</id>
-      <name>Apache Maven Snapshot Repository</name>
-      <url>scpexe://minotaur.apache.org/www/cvs.apache.org/maven-snapshot-repository</url>
-    </snapshotRepository>
-  </distributionManagement>
+      <url>http://cvs.apache.org/maven-snapshot-repository</url>
+    </repository>
+  </repositories>
 
   <issueManagement>
     <system>jira</system>
